tests/baselines/reference/parserParameterList11.errors.txt
==== tests/cases/compiler/parserParameterList11.ts (1 errors) ====
    (...arg?) => 102;
     ~~~~~~~
!!! parserParameterList11.ts(1,2): error TS1047: A rest parameter cannot be optional.